# simplify_deployment

./: .amlignore  .gitignore  .pre-commit-config.yaml  pyproject.toml
azure/: az_testing.yaml  create_fold_datasets.yaml  kfold_pipeline.yaml  kfold_pipeline_parallel.yaml  kfold_pipeline_parallel_lots_of_vars.yaml  kfold_pipeline_parallel_lots_of_vars_si_only.yaml  kfold_pipeline_parallel_s1.yaml  lag_16_kfold_pipeline_parallel_lots_of_vars_si_only.yaml  predict_all.yaml  predict_fold_0.yaml  predict_fold_1.yaml  predict_fold_10.yaml  predict_fold_11.yaml  predict_fold_2.yaml  predict_fold_3.yaml  predict_fold_4.yaml  predict_fold_5.yaml  predict_fold_6.yaml  predict_fold_7.yaml  predict_fold_8.yaml  predict_fold_9.yaml  single_fold_job.yaml  testing.yaml
src/simplify_deployment/: apply_filters.py  apply_filters.sh  apply_transformations.py  apply_transformations.sh  config_utils.py  create_datasets.py  create_datetime_columns.py  create_datetime_columns.sh  create_residuals_dataset.ipynb  create_target.py  create_target.sh  data_wrangling.py  ga_residuals.py  ga_torch_classes.py  genetic_algorithm.py  genome_validator.py  merge.py  merge_datasets.py  merge_minute_data.sh  merge_minute_filter_transform.sh  organism.py  predict_all.py  predict_all.sh  predict_s1.py  predict_single.py  predict_with_ga.py  resample_to_1_minute.py  resample_to_1_minute.sh  residuals_vs_direct.ipynb  test.ipynb  testing.py  train_vs_test_performance.ipynb
src/simplify_deployment/azure/: job_single_fold.yaml
src/simplify_deployment/config/: config_filters.yaml  config_transformations.yaml  (+7 more)
(+47 files in other folders)
