[tool.poetry]
name = "simplify-deployment"
version = "0.1.0"
description = ""
authors = ["Thomas Craessaerts <thomas.craessaerts@elia.be>"]
readme = "README.md"
packages = [{include = "simplify_deployment", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
