[tool.poetry]
name = "simplify-deployment"
version = "0.1.0"
description = ""
authors = ["Thomas Craessaerts <thomas.craessaerts@elia.be>"]
readme = "README.md"
packages = [{include = "simplify_deployment", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
pandas = "^2.2.2"
pyarrow = "^16.1.0"
matplotlib = "^3.9.0"
typer = "^0.12.3"
pre-commit = "^3.7.1"
scipy = "^1.13.1"
pydantic = "^2.7.3"

[tool.black]
line-length = 80

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
